# open-zk

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: fast_track.rs  init.rs  prove.rs  status.rs
contracts/: foundry.toml
contracts/script/: DeployDevnet.s.sol
contracts/src/: OpenZkDisputeGame.sol  OpenZkL2OutputOracle.sol
contracts/src/mock/: MockRiscZeroVerifier.sol  MockSP1Verifier.sol
contracts/test/: OpenZkDisputeGame.t.sol  OpenZkL2OutputOracle.t.sol
core/: Cargo.toml
core/src/types/: witness_data.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/src/commands/: estimate.rs  fast_track.rs  mod.rs  prove.rs  serve.rs  status.rs  witness_helper.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: abi.rs  client.rs  lib.rs  rpc_submitter.rs
crates/contracts/tests/: abi_tests.rs  onchain_e2e.rs
crates/core/: Cargo.toml
crates/core/src/traits/: mod.rs  pricing.rs  prover.rs  witness.rs  zkvm_io.rs
crates/core/src/types/: config.rs  journal.rs  mod.rs  proof.rs
crates/guest/: Cargo.toml
crates/guest/src/: lib.rs  oracle.rs  pipeline.rs  sp1_io.rs
crates/host/: Cargo.toml
crates/host/src/: elf.rs  lib.rs  witness.rs
crates/host/src/pricing/: boundless.rs  fixed.rs  mod.rs  succinct.rs  token_price.rs
crates/host/src/prover/: mock.rs  mod.rs  risc0.rs  risczero.rs  sp1.rs
crates/host/src/witness/: adapter.rs  kv_store.rs  mock.rs  mod.rs  rpc.rs
crates/host/tests/: execution_test.rs  range_ethereum_e2e.rs  range_ethereum_risc0_e2e.rs  range_ethereum_risczero_e2e.rs  rpc_witness_devnet.rs  witness_pipeline.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: dispatcher.rs  engine.rs  intent.rs  lib.rs  mock_monitor.rs  monitor.rs  rpc_monitor.rs
crates/orchestrator/tests/: dispatch_test.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: config.rs  lib.rs
crates/sdk/tests/: devnet_e2e.rs  mock_e2e.rs
crates/zkvm/risc0/guest/: Cargo.toml
crates/zkvm/risc0/guest/src/: lib.rs
crates/zkvm/risc0/host/: Cargo.toml
crates/zkvm/risc0/host/src/: lib.rs  prover.rs  witness.rs
crates/zkvm/sp1/guest/: Cargo.toml
crates/zkvm/sp1/guest/src/: lib.rs
crates/zkvm/sp1/host/: Cargo.toml
crates/zkvm/sp1/host/src/: lib.rs  prover.rs  witness.rs
guest/src/: lib.rs  pipeline.rs
guests/aggregation/: Cargo.toml
guests/aggregation/src/: main.rs
guests/range/: Cargo.toml
guests/range-celestia/: Cargo.toml
guests/range-celestia/src/: main.rs
guests/range-eigenda/: Cargo.toml
guests/range-eigenda/src/: main.rs
guests/range-ethereum/: Cargo.toml
guests/range-ethereum-risc0/: Cargo.toml
guests/range-ethereum-risc0/src/: main.rs
guests/range-ethereum/risc0/: Cargo.toml
guests/range-ethereum/risc0/src/: main.rs
guests/range-ethereum/sp1/: Cargo.toml
guests/range-ethereum/sp1/src/: main.rs
guests/range-ethereum/src/: lib.rs  main.rs
guests/range/src/: main.rs
host/: Cargo.toml
host/src/: elf.rs
host/src/prover/: mock.rs  mod.rs  sp1.rs
host/src/witness/: adapter.rs
host/tests/: range_ethereum_e2e.rs  witness_pipeline.rs
host/tests/common/: mod.rs
l2-finality/guest/: Cargo.toml
l2-finality/guest/src/: sp1_io.rs
l2-finality/guests/aggregation/: Cargo.toml
l2-finality/guests/aggregation/src/: main.rs
l2-finality/guests/range-celestia/: Cargo.toml
l2-finality/guests/range-celestia/src/: da_source.rs  main.rs
l2-finality/guests/range-eigenda/: Cargo.toml
l2-finality/guests/range-eigenda/src/: da_source.rs  main.rs
l2-finality/guests/range-ethereum/: Cargo.toml
l2-finality/guests/range-ethereum/risc0/: Cargo.toml
l2-finality/guests/range-ethereum/risc0/src/: main.rs
l2-finality/guests/range-ethereum/sp1/: Cargo.toml
l2-finality/guests/range-ethereum/sp1/src/: main.rs
l2-finality/guests/range-ethereum/src/: lib.rs
l2-finality/host/: Cargo.toml
l2-finality/host/src/: elf.rs
l2-finality/host/src/prover/: mod.rs
l2-finality/host/src/witness/: mod.rs
l2-finality/host/tests/: execution_test.rs  range_ethereum_e2e.rs
l2-finality/onchain/src/: lib.rs
l2-finality/orchestrator/src/: engine.rs
onchain/src/: abi.rs  rpc_submitter.rs
onchain/tests/: abi_tests.rs
orchestrator/src/: mock_monitor.rs  monitor.rs  rpc_monitor.rs
sdk/src/: config.rs
zkvm/risc0/guest/: Cargo.toml
zkvm/risc0/guest/src/: lib.rs
zkvm/risc0/host/: Cargo.toml  build.rs
zkvm/risc0/host/src/: elf.rs  lib.rs  prover.rs  witness.rs
zkvm/sp1/guest/: Cargo.toml
zkvm/sp1/guest/src/: lib.rs
zkvm/sp1/host/: Cargo.toml
zkvm/sp1/host/src/: elf.rs  lib.rs  prover.rs  witness.rs
