[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/sdk",
    "crates/guest",
    "crates/host",
    "crates/orchestrator",
    "crates/contracts",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-zk/open-zk"

[workspace.dependencies]
# Internal crates
open-zk = { path = "crates/sdk" }
open-zk-core = { path = "crates/core" }
open-zk-guest = { path = "crates/guest" }
open-zk-host = { path = "crates/host" }
open-zk-orchestrator = { path = "crates/orchestrator" }
open-zk-contracts = { path = "crates/contracts" }
open-zk-cli = { path = "crates/cli" }

# Ethereum / Alloy
alloy-primitives = { version = "1", default-features = false, features = ["serde"] }
alloy-sol-types = "1"

# Serialization
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# zkVM backends (optional, behind feature flags)
sp1-sdk = "6"
sp1-zkvm = "6"
risc0-zkvm = "3"
