[workspace]
resolver = "2"
members = [
    "core",
    "sdk",
    "l2-finality/guest",
    "l2-finality/host",
    "l2-finality/orchestrator",
    "l2-finality/onchain",
    "cli",
    "zkvm/sp1/host",
    "zkvm/risc0/host",
]
exclude = [
    "l2-finality/guests/range-ethereum",
    "l2-finality/guests/range-ethereum/sp1",
    "l2-finality/guests/range-ethereum/risc0",
    "l2-finality/guests/range-celestia",
    "l2-finality/guests/range-eigenda",
    "l2-finality/guests/aggregation",
    "zkvm/sp1/guest",
    "zkvm/risc0/guest",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-zk/open-zk"

[workspace.dependencies]
# Internal crates
open-zk = { path = "sdk" }
open-zk-core = { path = "core" }
open-zk-guest = { path = "l2-finality/guest" }
open-zk-host = { path = "l2-finality/host" }
open-zk-orchestrator = { path = "l2-finality/orchestrator" }
open-zk-contracts = { path = "l2-finality/onchain" }
open-zk-cli = { path = "cli" }

# Ethereum / Alloy
alloy-primitives = { version = "1", default-features = false, features = ["serde"] }
alloy-sol-types = "1"
alloy-provider = "1"
alloy-rpc-types-eth = "1"
alloy-contract = "1"
url = "2"

# Serialization
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
toml = "0.8"

# Kona — OP Stack derivation & execution (from archived op-rs/kona, same as op-succinct/kailua)
kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-driver = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-executor = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-preimage = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false, features = ["rkyv", "serde", "std"] }
kona-mpt = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-protocol = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-genesis = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-host = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", features = ["single"] }
kona-client = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-providers-alloy = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7" }
kona-registry = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }

# zkVM backends (optional, behind feature flags)
sp1-sdk = "6"
sp1-zkvm = "6"
risc0-zkvm = "3"
risc0-build = "3"

# zkVM host crates
open-zk-sp1 = { path = "zkvm/sp1/host" }
open-zk-risc0 = { path = "zkvm/risc0/host" }

# Serialization (zero-copy)
rkyv = { version = "0.7", default-features = false }
