[package]
name = "open-zk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for open-zk SDK"

[[bin]]
name = "open-zk"
path = "src/main.rs"

[dependencies]
open-zk = { workspace = true }
open-zk-core = { workspace = true }
open-zk-host = { workspace = true }
open-zk-orchestrator = { workspace = true }
open-zk-contracts = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
url = { workspace = true }
hex = "0.4"
