[package]
name = "open-zk-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for open-zk SDK"

[[bin]]
name = "open-zk"
path = "src/main.rs"

[features]
default = []
kona = ["open-zk-host/kona"]
sp1 = ["open-zk-host/sp1"]
risc0 = ["open-zk-host/risc0"]

[dependencies]
open-zk = { workspace = true }
open-zk-core = { workspace = true }
open-zk-host = { workspace = true }
open-zk-orchestrator = { workspace = true }
open-zk-contracts = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-sol-types = { workspace = true }
url = { workspace = true }
hex = "0.4"
