[package]
name = "open-zk-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solidity contract bindings for open-zk"

[dependencies]
open-zk-core = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
