[package]
name = "open-zk-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solidity contract bindings for open-zk"

[features]
default = []
rpc = ["dep:alloy-provider", "dep:alloy-contract", "dep:alloy-signer-local", "dep:url", "dep:tracing"]

[dependencies]
open-zk-core = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
alloy-provider = { workspace = true, optional = true }
alloy-contract = { workspace = true, optional = true }
alloy-signer-local = { version = "1", optional = true }
url = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
alloy-provider = { workspace = true }
url = { workspace = true }
tracing-subscriber = { workspace = true }
