[package]
name = "open-zk-guest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Guest-side I/O abstraction for zkVM programs"

[features]
sp1 = ["dep:sp1-zkvm"]
risczero = ["dep:risc0-zkvm"]

[dependencies]
open-zk-core = { workspace = true }
serde = { workspace = true }
sp1-zkvm = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, optional = true }
