[package]
name = "open-zk-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host-side prover backends and witness generation"

[features]
default = []
sp1 = ["dep:sp1-sdk"]
risczero = ["dep:risc0-zkvm"]
kona = [
    "dep:kona-host",
    "dep:kona-client",
    "dep:kona-providers-alloy",
    "dep:kona-proof",
    "dep:kona-preimage",
    "dep:kona-genesis",
    "dep:kona-protocol",
]

[dependencies]
open-zk-core = { workspace = true }
alloy-primitives = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sp1-sdk = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, optional = true }
kona-host = { workspace = true, optional = true }
kona-client = { workspace = true, optional = true }
kona-providers-alloy = { workspace = true, optional = true }
kona-proof = { workspace = true, optional = true }
kona-preimage = { workspace = true, optional = true }
kona-genesis = { workspace = true, optional = true }
kona-protocol = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
