[package]
name = "open-zk-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host-side prover backends and witness generation"

[features]
default = []
sp1 = ["dep:sp1-sdk", "dep:bincode"]
risczero = ["dep:risc0-zkvm", "dep:bincode", "dep:open-zk-build-risczero"]
# Rebuild RISC Zero guest ELFs from source (requires rzup toolchain)
rebuild-risczero-guest = ["risczero", "open-zk-build-risczero/rebuild-guest", "open-zk-build-risczero/debug-guest-build"]
kona = [
    "dep:kona-host",
    "dep:kona-client",
    "dep:kona-providers-alloy",
    "dep:kona-proof",
    "dep:kona-preimage",
    "dep:kona-genesis",
    "dep:kona-protocol",
    "dep:alloy-provider",
    "dep:alloy-rpc-types-eth",
    "dep:serde_json",
    "dep:url",
    "dep:rkyv",
]

[dependencies]
open-zk-core = { workspace = true }
alloy-primitives = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sp1-sdk = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, optional = true }
open-zk-build-risczero = { workspace = true, optional = true }
bincode = { version = "1", optional = true }
rkyv = { workspace = true, features = ["alloc", "validation", "size_32", "std"], optional = true }
kona-host = { workspace = true, optional = true }
kona-client = { workspace = true, optional = true }
kona-providers-alloy = { workspace = true, optional = true }
kona-proof = { workspace = true, optional = true }
kona-preimage = { workspace = true, optional = true }
kona-genesis = { workspace = true, optional = true }
kona-protocol = { workspace = true, optional = true }
alloy-provider = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
