[package]
name = "open-zk-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Host-side prover backends and witness generation"

[features]
default = []
sp1 = ["dep:open-zk-zkvm-sp1-host"]
risc0 = ["dep:open-zk-zkvm-risc0-host"]
# Rebuild RISC Zero guest ELFs from source (requires rzup toolchain)
rebuild-risc0-guest = ["risc0", "open-zk-zkvm-risc0-host/rebuild-guest"]
kona = [
    "dep:kona-host",
    "dep:kona-client",
    "dep:kona-providers-alloy",
    "dep:kona-proof",
    "dep:kona-preimage",
    "dep:kona-genesis",
    "dep:kona-protocol",
    "dep:alloy-provider",
    "dep:alloy-rpc-types-eth",
    "dep:serde_json",
    "dep:url",
    "dep:rkyv",
]

[dependencies]
open-zk-core = { workspace = true }
alloy-primitives = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
open-zk-zkvm-sp1-host = { path = "../zkvm/sp1/host", optional = true }
open-zk-zkvm-risc0-host = { path = "../zkvm/risc0/host", optional = true }
rkyv = { workspace = true, features = ["alloc", "validation", "size_32", "std"], optional = true }
kona-host = { workspace = true, optional = true }
kona-client = { workspace = true, optional = true }
kona-providers-alloy = { workspace = true, optional = true }
kona-proof = { workspace = true, optional = true }
kona-preimage = { workspace = true, optional = true }
kona-genesis = { workspace = true, optional = true }
kona-protocol = { workspace = true, optional = true }
alloy-provider = { workspace = true, optional = true }
alloy-rpc-types-eth = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
open-zk-zkvm-sp1-host = { path = "../zkvm/sp1/host" }
