[package]
name = "open-zk-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Intent resolver and orchestration engine for open-zk"

[dependencies]
open-zk-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
