[package]
name = "guest-aggregation"
version = "0.1.0"
edition = "2021"

# This crate is NOT a workspace member.
# It is compiled separately for zkVM targets:
#   SP1:       cd guests/aggregation && cargo prove build --features sp1
#   RISC Zero: cd guests/aggregation && cargo risc0 build --features risc0

[features]
sp1 = ["open-zk-guest/sp1"]
risc0 = ["open-zk-guest/risc0"]

[dependencies]
open-zk-guest = { path = "../../guest", default-features = false }
open-zk-core = { path = "../../core", default-features = false }
alloy-primitives = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
