[package]
name = "guest-range-ethereum"
version = "0.1.0"
edition = "2021"

# This crate is NOT a workspace member.
# It is compiled separately for zkVM targets:
#   SP1:       cd guests/range-ethereum && cargo prove build --features sp1
#   RISC Zero: cargo build -p open-zk-build-risc0 --features rebuild-guest,debug-guest-build

# This crate is SP1-only. For RISC Zero, see guests/range-ethereum-risc0/.

[features]
sp1 = ["open-zk-guest/sp1", "dep:sp1-zkvm"]

[dependencies]
open-zk-guest = { path = "../../crates/guest", default-features = false, features = ["pipeline"] }
open-zk-core = { path = "../../crates/core", default-features = false }
alloy-primitives = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

# Kona — only types needed for DaSourceFactory impl
kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-genesis = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }

# SP1 backend
sp1-zkvm = { version = "6", optional = true }

[profile.release]
opt-level = 3
