[package]
name = "guest-range-ethereum"
version = "0.1.0"
edition = "2021"

# Shared library for the Ethereum DA range proof guest.
# zkVM-specific entrypoints live in sp1/ and risc0/ sub-crates.
#
# This crate is NOT a workspace member.
# It is compiled separately for zkVM targets via the sub-crates.

[lib]
path = "src/lib.rs"

[features]
sp1 = ["open-zk-guest/sp1"]
risc0 = ["open-zk-guest/risc0"]

[dependencies]
open-zk-guest = { path = "../../guest", default-features = false, features = ["pipeline"] }
open-zk-core = { path = "../../core", default-features = false }
alloy-primitives = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }

# Kona — only types needed for DaSourceFactory impl
kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-genesis = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
