[package]
name = "guest-range"
version = "0.1.0"
edition = "2021"

# This crate is NOT a workspace member.
# It is compiled separately for zkVM targets:
#   SP1:       cargo build --features sp1 --target riscv32im-succinct-zkvm-elf
#   RISC Zero: cargo build --features risczero --target riscv32im-risc0-zkvm-elf

[features]
sp1 = ["open-zk-guest/sp1"]
risczero = ["open-zk-guest/risczero"]

[dependencies]
open-zk-guest = { path = "../../crates/guest", default-features = false }
open-zk-core = { path = "../../crates/core", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
