[package]
name = "guest-range"
version = "0.1.0"
edition = "2021"

# This crate is NOT a workspace member.
# It is compiled separately for zkVM targets:
#   SP1:       cd guests/range && cargo prove build --features sp1
#   RISC Zero: cd guests/range && cargo risczero build --features risczero

[features]
sp1 = ["open-zk-guest/sp1", "dep:sp1-zkvm"]
risczero = ["open-zk-guest/risczero", "dep:risc0-zkvm"]

[dependencies]
open-zk-guest = { path = "../../crates/guest", default-features = false }
open-zk-core = { path = "../../crates/core", default-features = false }
alloy-primitives = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
sp1-zkvm = { version = "6", optional = true }
risc0-zkvm = { version = "3", optional = true }

# Kona guest-side crates for OP Stack derivation (no_std compatible).
# These are used when the full kona derivation pipeline is enabled.
# kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
# kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
# kona-driver = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
# kona-executor = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
# kona-preimage = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
# kona-mpt = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
