[package]
name = "guest-range-celestia"
version = "0.1.0"
edition = "2021"

# This crate is NOT a workspace member.
# It is compiled separately for zkVM targets:
#   SP1:       cd guests/range-celestia && cargo prove build --features sp1
#   RISC Zero: cd guests/range-celestia && cargo risc0 build --features risc0

[features]
sp1 = ["dep:open-zk-sp1-guest", "dep:sp1-zkvm"]
risc0 = ["dep:open-zk-risc0-guest", "dep:risc0-zkvm"]

[dependencies]
open-zk-guest = { path = "../../guest", default-features = false, features = ["pipeline"] }
open-zk-core = { path = "../../../core", default-features = false }
open-zk-sp1-guest = { path = "../../../zkvm/sp1/guest", optional = true }
open-zk-risc0-guest = { path = "../../../zkvm/risc0/guest", optional = true }
alloy-primitives = { version = "1", default-features = false }
alloy-consensus = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
async-trait = "0.1"

# Kona — types needed for DaSourceFactory impl + DA source
kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-preimage = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-protocol = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }
kona-genesis = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.7", default-features = false }

# zkVM backends
sp1-zkvm = { version = "6", optional = true }
risc0-zkvm = { version = "3", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
