[package]
name = "open-zk-risc0"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RISC Zero host-side backend: prover, ELF builder, and witness adapter"

[features]
default = []
# Rebuild guest ELFs from source (requires rzup toolchain).
rebuild-guest = ["dep:risc0-build"]
# Use local cross-compilation instead of Docker (faster for development).
debug-guest-build = []

[dependencies]
open-zk-core = { workspace = true }
alloy-primitives = { workspace = true }
risc0-zkvm = { workspace = true }
bincode = "1"
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
risc0-build = { workspace = true, optional = true }

# Guest crate paths (relative to this Cargo.toml).
# risc0-build reads this to discover guest programs.
[package.metadata.risc0]
methods = ["../../../guests/range-ethereum/risc0"]
