[package]
name = "open-zk-zkvm-sp1-guest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SP1 guest-side I/O adapter for open-zk"

[dependencies]
open-zk-core = { workspace = true }
serde = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }
sha2 = { version = "0.10", default-features = false }
