[package]
name = "open-zk-zkvm-sp1-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SP1 host-side prover backend for open-zk"

[dependencies]
open-zk-core = { workspace = true }
alloy-primitives = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
sp1-sdk = { workspace = true }
bincode = "1"
