[package]
name = "guest-range-ethereum-risc0"
version = "0.1.0"
edition = "2021"

# RISC Zero entrypoint for the Ethereum DA range proof guest.
#
# Build:
#   cargo build -p open-zk-risc0 --features rebuild-guest,debug-guest-build

[dependencies]
guest-range-ethereum = { path = "..", default-features = false }
open-zk-risc0-guest = { path = "../../../../zkvm/risc0/guest" }
risc0-zkvm = { version = "3", default-features = false, features = ["std", "heap-embedded-alloc", "unstable"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

# RISC Zero patched crates for riscv32im compatibility (atomic symbols, etc.)
# Following kailua's approach: https://github.com/boundless-xyz/kailua
[patch.crates-io]
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
