[package]
name = "guest-range-ethereum-sp1"
version = "0.1.0"
edition = "2021"

# SP1 entrypoint for the Ethereum DA range proof guest.
#
# Build:
#   cd guests/range-ethereum/sp1 && cargo prove build

[dependencies]
guest-range-ethereum = { path = "..", default-features = false }
open-zk-sp1-guest = { path = "../../../../zkvm/sp1/guest" }
sp1-zkvm = "6"

[profile.release]
opt-level = 3
